--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.3",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.31",
+    "multiselect-react-dropdown": "^2.0.21",
     "query-string": "^7.1.1",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
@@ -38,6 +39,7 @@
     "react-datetime": "^3.0.4",
     "react-doc-viewer": "^0.1.5",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^12.0.4",
     "react-file-icon": "^1.1.0",
     "react-github-btn": "^1.2.0",
     "react-icons": "^4.3.1",
@@ -61,6 +63,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
     "scss-loader": "^0.0.1",
